--- a/style.css
+++ b/style.css
@@ -292,7 +292,7 @@ ul a{
     justify-content: center;
     align-items: center;
 }
-.social-icons i{
+.fa-brands{
     font-size: 1rem;
     margin-left: 5px;
     margin-right: 5px;
